--- a/css/styles.css
+++ b/css/styles.css
@@ -563,7 +563,7 @@ img {
 
   color: var(--color-txt-white);
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
 
   border: 1px solid var(--color-border-white);
@@ -595,7 +595,6 @@ img {
   min-width: 165px;
   min-height: 40px;
   padding: 8px 24px;
-  gap: 16px;
 
   font-weight: 500;
   letter-spacing: 0.04em;
@@ -604,6 +603,9 @@ img {
   background-color: var(--color-bg-iris);
   border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.footer-subscribe-icon {
+  margin-left: 16px;
 }
 /* 
   |==========================================================
