--- a/css/styles.css
+++ b/css/styles.css
@@ -743,7 +743,7 @@ img {
 
   width: 408px;
   min-height: 576px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 
   background-color: var(--color-bg-dairy);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
